<resources>
    <string name="app_name">PathfinderAssistant</string>

    <!-- Character Names -->
    <string name="seoni_name" translatable="false">Seoni</string>
    <string name="imrijka_name" translatable="false">Imrijka</string>

    <!-- Character Powers -->
    <string name="character_powers">Powers:</string>
    <string name="seoni_powers">Before your combat check, you may discard a card to draw a card that has the Arcane
        trait from your discard pile.\n\nYou may automatically succeed at your check to recharge a spell that has the
        Attack trait.\n\nWhen you acquire an ally, you may draw a card.
    </string>

    <!-- Card Names -->
    <string name="cards_colon">Cards:</string>
    <string name="dazzle_name" translatable="false">Dazzle</string>
    <string name="frigid_blast_name" translatable="false">Frigid Blast</string>
    <string name="fiery_glare_name" translatable="false">Fiery Glare</string>
    <string name="lightning_touch_name" translatable="false">Lightning Touch</string>
    <string name="sagacity_name" translatable="false">Sagacity</string>
    <string name="magic_padded_armor_name" translatable="false">Magic Padded Armor</string>
    <string name="sages_journal_name" translatable="false">Sage\'s Journal</string>
    <string name="wand_of_paralyze_name" translatable="false">Wand of Paralyze</string>
    <string name="frog_name" translatable="false">Frog</string>
    <string name="teamster_name" translatable="false">Teamster</string>
    <string name="apprentice_name" translatable="false">Apprentice</string>
    <string name="blessing_of_ascension_name" translatable="false">Blessing of Ascension</string>
    <string name="blessing_of_shax_name" translatable="false">Blessing of Shax</string>

    <!-- Card Descriptions -->
    <string name="dazzle_descrip">For your combat check, discard this card to use your Arcane skill + 2d4.\n\nAfter
        playing this card, if you do not have the Arcane skill, banish it; otherwise you may succeed at an Arcane 6
        check to recharge this card instead of discarding it.
    </string>
    <string name="frigid_blast_descrip">For your combat check, discard this card to use your Arcane or Divine skill +
        2d4.\n\nAfter playing this card, if you do not have either the Arcane or Divine skill, banish it; otherwise, you
        may succeed at an Arcane 6 or Divine 8 check to recharge this card instead of discarding it.
    </string>
    <string name="fiery_glare_descrip">For your combat check, discard this card to use your Arcane or Divine skill +
        2d4.\n\nWhen you encounter a weapon, a spell, or an item during your exploration, discard this card to banish
        it; you may explore again.\n\nAfter playing this card, if you do not have either the Arcane or Divine skill,
        banish it; otherwise, you may succeed at an Arcane or Divine 10 check to recharge this card instead of
        discarding it.
    </string>
    <string name="lightning_touch_descrip">For your combat check, discard this card to use your Arcane skill +
        2d4.\n\nAfter playing this card, if you do not have the Arcane skill, banish it; otherwise you may succeed at an
        Arcane 6 check to recharge this card instead of discarding it.
    </string>
    <string name="sagacity_descrip">Display this card next to a character\'s deck. While displayed, add 3 to that
        character\'s Wisdom checks. At the end of the turn, if you do not have either the Arcane or Divine skill, banish
        this card; otherwise, you may attempt at an Arcane or Divine 8 check. If you succeed, recharge this card; if you
        fail, discard it.
    </string>
    <string name="magic_padded_armor_descrip">Discard this card to reduce Combat damage dealt to you before or after you
        act by 2.\n\nBanish this card to reduce all damage dealt to you to 0; if proficient with light armors, bury it
        instead.\n\nIf proficient with light armors, you may recharge this card when you reset your hand.
    </string>
    <string name="sages_journal_descrip">Reveal this card to add 1d4 to your check to defeat a henchman or villain.
    </string>
    <string name="wand_of_paralyze_descrip">Bury this card to evade a non-villain monster you encounter; put it on the
        top or bottom of its location deck.\n\nAfter playing this card, you may succeed at an Arcane or Divine 12 check
        to recharge this card instead of burying it.
    </string>
    <string name="frog_descrip">Discard this card to explore your location. During this exploration, when you would
        encounter a bane that has the Obstacle or Trap trait, you may instead bury this card to put the bane on the
        bottom of its location deck.
    </string>
    <string name="teamster_descrip">Recharge this card to add 1d6 to your Constitution or Wisdom non-combat
        check.\n\nDiscard this card to explore your location.
    </string>
    <string name="apprentice_descrip">Recharge this card to add 1d6 to your Arcane or Divine check.\n\nDiscard this card
        to explore your location.
    </string>
    <string name="blessing_of_ascension_descrip">If you encounter this card and you have a mythic charge, you
        automatically acquire it.\n\nDiscard this card to add 1 die to any check.\n\nDiscard this card to explore your
        location.\n\nDiscard this card to get a mythic charge.
    </string>
    <string name="blessing_of_shax_descrip">Discard this card to add 1 die to any check.\n\nDiscard this card to add 2
        dice to any Strength or Dexterity combat check. \n\n Discard this card to explore your location. \n\n After you
        play this card, if the top card of the blessings discard pile has the Corrupted trait, discard a card.
    </string>

    <!-- DiceActivity -->
    <string name="dice_menu">Dice</string>
    <string name="d4" translatable="false">d4:</string>
    <string name="d6" translatable="false">d6:</string>
    <string name="d8" translatable="false">d8:</string>
    <string name="d10" translatable="false">d10:</string>
    <string name="d12" translatable="false">d12:</string>
    <string name="d20" translatable="false">d20:</string>
    <string name="minus" translatable="false">-</string>
    <string name="plus" translatable="false">+</string>
    <string name="reset">Reset</string>
    <string name="roll">Roll Dice</string>
    <string name="total">Total:</string>
    <string name="cannot_decrement_error">Number must not be below 0.</string>

    <!-- Attributions -->
    <string name="dice_icon_source" translatable="false">
        https://www.kisspng.com/png-computer-icons-clip-art-dice-icon-5720498/
    </string>

    <string name="card_icon_source" translatable="false">
        https://www.kisspng.com/png-one-card-ace-of-spades-playing-card-ace-of-hearts-81849/
    </string>

    <!-- CharacterSummaryActivity -->
    <string name="skills">Skills</string>
    <string name="powers">Powers</string>
    <string name="cards">Cards</string>
    <string name="card_menu">Cards</string>
    <string name="edit_character">Edit</string>

    <!-- AddCharacterActivity -->
    <string name="select_character">Please select a character:</string>

    <!-- EditCharacterActivity -->
    <string name="name">Name:</string>
    <string name="edit_name_hint">Input Name</string>
    <string name="edit_name_digits">ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyk1234567890</string>
    <string name="subclass">Subclass:</string>
    <string name="skill_feats">Skill Feats</string>
    <string name="strength_bonus">Strength:</string>
    <string name="dexterity_bonus">Dexterity:</string>
    <string name="constitution_bonus">Constitution:</string>
    <string name="intelligence_bonus">Intelligence:</string>
    <string name="wisdom_bonus">Wisdom:</string>
    <string name="charisma_bonus">Charisma:</string>
    <string name="power_feats">Power Feats</string>
    <string name="hand_size">Hand Size: </string>
    <string name="card_feats">Card Feats</string>
    <string name="current_weapons">Weapons:</string>
    <string name="current_spells">Spells:</string>
    <string name="current_armors">Armors:</string>
    <string name="current_items">Items:</string>
    <string name="current_allies">Allies:</string>
    <string name="current_blessings">Blessings:</string>
    <string name="save_character">Save</string>
    <string name="delete_character">Delete</string>
    <string name="character_saved_confirmation">Character saved.</string>
    <string name="character_not_deleted">Character not in database.</string>
    <string name="character_deleted">Character deleted.</string>

</resources>
