<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EditCharacterActivity"
        android:background="@color/colorBackground">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.constraint.Guideline
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintGuide_percent=".5"/>
        <TextView
                android:id="@+id/skills_header_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skill_bonuses"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                android:id="@+id/edit_strength_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strength_bonus"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/skills_header_tv"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
        />
        <TextView
                android:id="@+id/edit_dexterity_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dexterity_bonus"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/edit_strength_tv"/>
        <TextView
                android:id="@+id/edit_constitution_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/constitution_bonus"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/edit_dexterity_tv"/>
        <TextView
                android:id="@+id/edit_intelligence_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intelligence_bonus"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="@+id/guideline" android:layout_marginLeft="8dp"
                app:layout_constraintTop_toTopOf="@+id/edit_strength_tv"
        />
        <TextView
                android:id="@+id/edit_wisdom_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wisdom_bonus"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="@+id/guideline" android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/edit_intelligence_tv"/>
        <TextView
                android:id="@+id/edit_charisma_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/charisma_bonus"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/edit_wisdom_tv" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="@+id/guideline" android:layout_marginLeft="8dp"
        />
        <Spinner
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:id="@+id/edit_strength_spinner"
                app:layout_constraintTop_toTopOf="@+id/edit_strength_tv"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintBottom_toBottomOf="@+id/edit_strength_tv"/>
        <Spinner
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/edit_dexterity_tv" android:id="@+id/edit_dexterity_spinner"
                app:layout_constraintBottom_toBottomOf="@+id/edit_dexterity_tv"/>
        <Spinner
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintEnd_toStartOf="@+id/skills_vertical_divider"
                app:layout_constraintTop_toTopOf="@+id/edit_constitution_tv" android:id="@+id/edit_constitution_spinner"
                app:layout_constraintBottom_toBottomOf="@+id/edit_constitution_tv"/>
        <Spinner
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:id="@+id/edit_intelligence_spinner"
                app:layout_constraintTop_toTopOf="@+id/edit_intelligence_tv" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/edit_intelligence_tv"/>
        <Spinner
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:id="@+id/edit_wisdom_spinner"
                app:layout_constraintTop_toTopOf="@+id/edit_wisdom_tv" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/edit_wisdom_tv"/>
        <Spinner
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:id="@+id/edit_charisma_spinner"
                app:layout_constraintTop_toTopOf="@+id/edit_charisma_tv" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/edit_charisma_tv"/>
        <View
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:id="@+id/skills_vertical_divider"
                app:layout_constraintTop_toTopOf="@+id/edit_intelligence_tv"
                app:layout_constraintBottom_toBottomOf="@+id/edit_charisma_tv" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:background="@android:color/darker_gray"/>
        <View
                android:layout_width="0dp"
                android:layout_height="1dp" android:id="@+id/skills_powers_divider"
                app:layout_constraintTop_toBottomOf="@+id/edit_charisma_tv"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" android:background="@android:color/darker_gray"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="8dp"/>


    </android.support.constraint.ConstraintLayout>

</ScrollView>