<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CharacterSummaryActivity"
        android:background="@color/colorBackground">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.constraint.Guideline
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintGuide_percent=".5"/>
        <TextView
                android:id="@+id/skills_header_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skills"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                android:id="@+id/strength_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Strength: d4 +2"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/skills_header_tv"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline" android:layout_marginRight="8dp"/>
        <TextView
                android:id="@+id/dexterity_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Dexterity: d4 +2"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline"
                android:layout_marginRight="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/strength_tv"/>
        <TextView
                android:id="@+id/constitution_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Constitution: d4 +2"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline" android:layout_marginRight="8dp"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/dexterity_tv"/>
        <TextView
                android:id="@+id/intelligence_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Intelligence: d4 +2"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="@+id/guideline" android:layout_marginLeft="8dp"
                app:layout_constraintTop_toTopOf="@+id/strength_tv" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"/>
        <TextView
                android:id="@+id/wisdom_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Wisdom: d4 +2"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="@+id/guideline" android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/intelligence_tv"/>
        <TextView
                android:id="@+id/charisma_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Charisma: d4 +2"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/wisdom_tv" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="@+id/guideline" android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="8dp"/>
        <View
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:id="@+id/skills_vertical_divider"
                app:layout_constraintTop_toTopOf="@+id/intelligence_tv"
                app:layout_constraintBottom_toBottomOf="@+id/charisma_tv" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:background="@android:color/darker_gray"/>
        <TextView
                android:id="@+id/skills_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Knowledge: Intelligence +2 \n Perception: Wisdom +2 \n Arcane: Charisma +2"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/charisma_tv"/>
        <View
                android:layout_width="0dp"
                android:layout_height="2dp" android:id="@+id/skills_powers_divider"
                app:layout_constraintTop_toBottomOf="@+id/skills_tv" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" android:background="@android:color/darker_gray"
                android:layout_marginTop="8dp"/>

        <TextView
                android:id="@+id/powers_header_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/powers"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/skills_powers_divider" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginTop="8dp"/>

        <TextView
                android:id="@+id/powers_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="Before your combat check, you may discard a card to draw a card that has the Arcane trait from your discard pile.\n\nYou may automatically succeed at your check to recharge a spell that has the Attack trait.\n\nWhen you acquire an ally, you may draw a card.\n\nFor your power feat, you may check any 1 of the traits below. That trait applies in any power that uses the word mastered."
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/powers_header_tv"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
        <View
                android:layout_width="0dp"
                android:layout_height="2dp" android:id="@+id/powers_cards_divider"
                app:layout_constraintTop_toBottomOf="@+id/powers_tv" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" android:background="@android:color/darker_gray"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"/>

        <TextView
                android:id="@+id/cards_header_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cards"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.488"
                app:layout_constraintTop_toBottomOf="@+id/powers_cards_divider" android:layout_marginTop="8dp"/>
        <TextView
                android:id="@+id/weapons_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Weapons: 0"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/cards_header_tv"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline" android:layout_marginRight="8dp"/>
        <TextView
                android:id="@+id/spells_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Spells: 5"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline"
                android:layout_marginRight="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/weapons_tv"/>
        <TextView
                android:id="@+id/armors_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Armors: 1"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline" android:layout_marginRight="8dp"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/spells_tv"/>
        <TextView
                android:id="@+id/items_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Items: 2"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="@+id/guideline" android:layout_marginLeft="8dp"
                app:layout_constraintTop_toTopOf="@+id/weapons_tv" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"/>
        <TextView
                android:id="@+id/allies_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Allies: 3"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="@+id/guideline" android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/items_tv"/>
        <TextView
                android:id="@+id/blessings_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Blessings: 4"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/allies_tv" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="@+id/guideline" android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="8dp"/>
        <View
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:id="@+id/cards_vertical_divider"
                app:layout_constraintTop_toTopOf="@+id/items_tv"
                app:layout_constraintBottom_toBottomOf="@+id/blessings_tv" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:background="@android:color/darker_gray"/>


    </android.support.constraint.ConstraintLayout>

</ScrollView>